<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/text_preference">
        <Preference
            android:key="@string/id_language"
            android:title="@string/text_language"/>
        <Preference
            android:key="@string/id_swipe_back"
            android:title="@string/text_swipe_to_return"/>
        <CheckBoxPreference
            android:key="@string/id_exit_confirm"
            android:title="@string/text_exit_confirm"
            android:summary="Press back key twice to exit"
            android:checked="true"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="Storage">
        <Preference
            android:key="@string/clear_cache"
            android:title="@string/text_clear_cache"
            android:summary="@string/text_clear_cache_summary"/>

    </PreferenceCategory>
</PreferenceScreen>